--- a/ImageLibraryWinUI.csproj
+++ b/ImageLibraryWinUI.csproj
@@ -10,17 +10,11 @@
     <PackageId>Xiaowang0229sImageLibraryWinUI</PackageId>
     <Title>Xiaowang0229sImageLibraryWinUI</Title>
     <Authors>Xiaowang0229</Authors>
-    <PackageIcon>Fa6SolidImage.png</PackageIcon>
+    <PackageIcon></PackageIcon>
     <RepositoryUrl>https://github.com/Xiaowang0229/ImageLibraryWinUI</RepositoryUrl>
 	  <Description>Resx 文件里的图片提取，保存等操作，（仅适用于WinUI）</Description>
-	  <Version>1.2.0</Version>
+	  <Version>1.3.0</Version>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="Fa6SolidImage.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.7463" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.260101001" />
